# metrix-cli

./: .gitignore  Cargo.toml  README.md  TODO  UDisc Scorecards.csv  makezip.sh  running.txt  udisc_scorecards.csv
docs/: MAC-running.txt  WIN-running.txt
src/: competitions.html  competitions.rs  courses.rs  main.rs  udisc_scorecards.rs
